--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
             name="description"
-            content="Create a React web app that uses Mapbox GL JS to render a map"
+            content="Map Memories"
     />
-    <title>Use Mapbox GL JS in a React app</title>
+    <title>Map Memories</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
 </html>
